--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(0, 30, 30);
+    background-color: white;
     color: black;
     font-size: 150%;
     line-height: 1.4;
